# aesthetic-predictor-v2-5

./: Makefile  README.md  app.py  inference.py  pyproject.toml
docker/: Dockerfile
models/: aesthetic_predictor_v2_5.pth
src/aesthetic_predictor_v2_5/: __init__.py  siglip_v2_5.py
